gcc/testsuite/rust/rustc/ui/parser/bad-pointer-type.rs
fn foo(_: *()) {
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

